src/Typography/Typography.css
:root {
    --bold-font-weight: bold;

    /* type sizes */

    --size-1: 10px;
    --size-2: 11px;
    --size-3: 12px;
    --size-4: 14px;
    --size-5: 16px;
    --size-6: 18px;
    --size-7: 21px;
    --size-8: 24px;
    --size-9: 36px;
    --size-10: 48px;
    --size-11: 64px;
    --size-12: 96px;

    /* leading */

    --leading-1: 11px;
    --leading-2: 12px;
    --leading-3: 14px;
    --leading-4: 16px;
    --leading-5: 18px;
    --leading-6: 20px;
    --leading-7: 23px;
    --leading-8: 28px;
    --leading-9: 42px;
    --leading-10: 56px;
    --leading-11: 76px;
    --leading-12: 114px;

    /* tracking */

    --tracking-1: -0.025px;
    --tracking-2: -0.05px;
    --tracking-3: -0.1px;
    --tracking-4: -0.15px;
    --tracking-5: -0.2px;
    --tracking-6: -0.25px;
    --tracking-7: -0.3px;
    --tracking-8: -1px;
    --tracking-9: -1.25px;
    --tracking-10: -1.75px;
    --tracking-11: -2.25px;
    --tracking-12: -3.25px;

    /* word-spacing */

    --word-spacing-1: 0;
    --word-spacing-2: 0;
    --word-spacing-3: 0;
    --word-spacing-4: 0;
    --word-spacing-5: 0;
    --word-spacing-6: 0;
    --word-spacing-7: -1.3px;
    --word-spacing-8: -2px;
    --word-spacing-9: -2.25px;
    --word-spacing-10: -2.75px;
    --word-spacing-11: -3.25px;
    --word-spacing-12: -4.25px;
}

/* formatting */

.text-left { text-align: left; }
.text-right { text-align: justify; }
.text-center { text-align: center; }
.text-justify { text-align: justify; }

.bold { font-weight: var(--bold-font-weight); }
.regular { font-style: normal; }
.italic { font-style: italic; }

.underline { text-decoration: underline; }

/* lists */

.list-style-none {
    list-style: none;
}

/* text overflow */

.no-wrap {
    white-space: nowrap;
}

.break-word {
    word-wrap: break-word;
}

.truncate {
    max-width: 100%;
    overflow: hidden;
    word-wrap: nowrap;
    text-overflow: ellipsis;
}

/* styles */

.sans-serif {
    font-family:
        "Helvetica Neue",
        Helvetica,
        "ヒラギノ角ゴ Pro W3",
        "Hiragino Kaku Gothic Pro",
        "メイリオ",
        Meiryo,
        "ＭＳ Ｐゴシック",
        arial,
        sans-serif;
}

.antialiased {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

/* scale */

.text-xs {
    font-size: var(--size-1);
    line-height: var(--leading-1);
    letter-spacing: var(--tracking-1);
    word-spacing: var(--word-spacing-1);
}

.text-s {
    font-size: var(--size-2);
    line-height: var(--leading-2);
    letter-spacing: var(--tracking-2);
    word-spacing: var(--word-spacing-2);
}

.text-m {
    font-size: var(--size-3);
    line-height: var(--leading-3);
    letter-spacing: var(--tracking-3);
    word-spacing: var(--word-spacing-3);
}

.text-l {
    font-size: var(--size-4);
    line-height: var(--leading-4);
    letter-spacing: var(--tracking-4);
    word-spacing: var(--word-spacing-4);
}

.text-xl {
    font-size: var(--size-5);
    line-height: var(--leading-5);
    letter-spacing: var(--tracking-5);
    word-spacing: var(--word-spacing-5);
}

.display-xs {
    font-size: var(--size-6);
    line-height: var(--leading-6);
    letter-spacing: var(--tracking-6);
    word-spacing: var(--word-spacing-6);
}

.display-s {
    font-size: var(--size-7);
    line-height: var(--leading-7);
    letter-spacing: var(--tracking-7);
    word-spacing: var(--word-spacing-7);
}

.display-m {
    font-size: var(--size-8);
    line-height: var(--leading-8);
    letter-spacing: var(--tracking-8);
    word-spacing: var(--word-spacing-8);
}

.display-l {
    font-size: var(--size-9);
    line-height: var(--leading-9);
    letter-spacing: var(--tracking-9);
    word-spacing: var(--word-spacing-9);
}

.display-xl {
    font-size: var(--size-10);
    line-height: var(--leading-10);
    letter-spacing: var(--tracking-10);
    word-spacing: var(--word-spacing-10);
}

@media (--sm) {
    .text-xs {
        font-size: var(--size-2);
        line-height: var(--leading-2);
        letter-spacing: var(--tracking-2);
        word-spacing: var(--word-spacing-2);
    }

    .text-s {
        font-size: var(--size-3);
        line-height: var(--leading-3);
        letter-spacing: var(--tracking-3);
        word-spacing: var(--word-spacing-3);
    }

    .text-m {
        font-size: var(--size-4);
        line-height: var(--leading-4);
        letter-spacing: var(--tracking-4);
        word-spacing: var(--word-spacing-4);
    }

    .text-l {
        font-size: var(--size-5);
        line-height: var(--leading-5);
        letter-spacing: var(--tracking-5);
        word-spacing: var(--word-spacing-5);
    }

    .text-xl {
        font-size: var(--size-6);
        line-height: var(--leading-6);
        letter-spacing: var(--tracking-6);
        word-spacing: var(--word-spacing-6);
    }

    .display-xs {
        font-size: var(--size-7);
        line-height: var(--leading-7);
        letter-spacing: var(--tracking-7);
        word-spacing: var(--word-spacing-7);
    }

    .display-s {
        font-size: var(--size-8);
        line-height: var(--leading-8);
        letter-spacing: var(--tracking-8);
        word-spacing: var(--word-spacing-8);
    }

    .display-m {
        font-size: var(--size-9);
        line-height: var(--leading-9);
        letter-spacing: var(--tracking-9);
        word-spacing: var(--word-spacing-9);
    }

    .display-l {
        font-size: var(--size-10);
        line-height: var(--leading-10);
        letter-spacing: var(--tracking-10);
        word-spacing: var(--word-spacing-10);
    }

    .display-xl {
        font-size: var(--size-11);
        line-height: var(--leading-11);
        letter-spacing: var(--tracking-11);
        word-spacing: var(--word-spacing-11);
    }
}

@media (--lg) {
    .text-xs {
        font-size: var(--size-3);
        line-height: var(--leading-3);
        letter-spacing: var(--tracking-3);
        word-spacing: var(--word-spacing-3);
    }

    .text-s {
        font-size: var(--size-4);
        line-height: var(--leading-4);
        letter-spacing: var(--tracking-4);
        word-spacing: var(--word-spacing-4);
    }

    .text-m {
        font-size: var(--size-5);
        line-height: var(--leading-5);
        letter-spacing: var(--tracking-5);
        word-spacing: var(--word-spacing-5);
    }

    .text-l {
        font-size: var(--size-6);
        line-height: var(--leading-6);
        letter-spacing: var(--tracking-6);
        word-spacing: var(--word-spacing-6);
    }

    .text-xl {
        font-size: var(--size-7);
        line-height: var(--leading-7);
        letter-spacing: var(--tracking-7);
        word-spacing: var(--word-spacing-7);
    }

    .display-xs {
        font-size: var(--size-8);
        line-height: var(--leading-8);
        letter-spacing: var(--tracking-8);
        word-spacing: var(--word-spacing-8);
    }

    .display-s {
        font-size: var(--size-9);
        line-height: var(--leading-9);
        letter-spacing: var(--tracking-9);
        word-spacing: var(--word-spacing-9);
    }

    .display-m {
        font-size: var(--size-10);
        line-height: var(--leading-10);
        letter-spacing: var(--tracking-10);
        word-spacing: var(--word-spacing-10);
    }

    .display-l {
        font-size: var(--size-11);
        line-height: var(--leading-11);
        letter-spacing: var(--tracking-11);
        word-spacing: var(--word-spacing-11);
    }

    .display-xl {
        font-size: var(--size-12);
        line-height: var(--leading-12);
        letter-spacing: var(--tracking-12);
        word-spacing: var(--word-spacing-12);
    }
}

